more monster entries

--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -27,79 +27,79 @@
                 <li><a href="#piko_hammer_family">Piko Hammer Family</a></li>
                 <li><a href="#armordillo_family">Armordillo Family</a></li>
                 <li><a href="#droplet_ninja_family">Droplet Ninja Family</a></li>
-                <li><a href="#mamel">Mr. Drone Family</a></li>
-                <li><a href="#mamel">Stone Beast Family</a></li>
-                <li><a href="#mamel">Copycat Mask Family</a></li>
-                <li><a href="#mamel">Schubell Family</a></li>
-                <li><a href="#mamel">Dosukoi Family</a></li>
-                <li><a href="#mamel">Snacky</a></li>
-                <li><a href="#mamel">Tiny Phoenix</a></li>
-                <li><a href="#mamel">Escargon</a></li>
-                <li><a href="#mamel">Queen Spider</a></li>
-                <li><a href="#mamel">Armor Spider</a></li>
-                <li><a href="#mamel">N'dubba</a></li>
+                <li><a href="#mr_drone_family">Mr. Drone Family</a></li>
+                <li><a href="#stone_beast_family">Stone Beast Family</a></li>
+                <li><a href="#copycat_mask_family">Copycat Mask Family</a></li>
+                <li><a href="#schubell_family">Schubell Family</a></li>
+                <li><a href="#dosukoi_family">Dosukoi Family</a></li>
+                <li><a href="#snacky">Snacky</a></li>
+                <li><a href="#tiny_phoenix">Tiny Phoenix</a></li>
+                <li><a href="#escargon">Escargon</a></li>
+                <li><a href="#queen_spider">Queen Spider</a></li>
+                <li><a href="#armor_spider">Armor Spider</a></li>
+                <li><a href="#ndubba">N'dubba</a></li>
               </ul>
               <li><a href="#weapon">Weapon</a></li>
               <ul>
-                <li><a href="#mamel">Swordsman Family</a></li>
-                <li><a href="#mamel">Taur Family</a></li>
-                <li><a href="#mamel">Ashigarudon Family</a></li>
+                <li><a href="#swordsman_family">Swordsman Family</a></li>
+                <li><a href="#taur_family">Taur Family</a></li>
+                <li><a href="#ashigarudon_family">Ashigarudon Family</a></li>
               </ul>
               <li><a href="#throwing">Throwing</a></li>
               <ul>
-                <li><a href="#mamel">Porky Family</a></li>
-                <li><a href="#mamel">Horse Ronin Family</a></li>
-                <li><a href="#mamel">Tiger Tosser Family</a></li>
+                <li><a href="#porky_family">Porky Family</a></li>
+                <li><a href="#horse_ronin_family">Horse Ronin Family</a></li>
+                <li><a href="#tiger_tosser_family">Tiger Tosser Family</a></li>
               </ul>
               <li><a href="#magic">Magic</a></li>
               <ul>
-                <li><a href="#mamel">King Tusker Family</a></li>
-                <li><a href="#mamel">Bat Kangaroo Family</a></li>
-                <li><a href="#mamel">Sheep Priest Family</a></li>
+                <li><a href="#king_tusker_family">King Tusker Family</a></li>
+                <li><a href="#bat_kangaroo_family">Bat Kangaroo Family</a></li>
+                <li><a href="#sheep_priest_family">Sheep Priest Family</a></li>
               </ul>
               <li><a href="#item_change">Item Change</a></li>
               <ul>
-                <li><a href="#mamel">Nigiri Trainee Family</a></li>
-                <li><a href="#mamel">Mixer Family</a></li>
-                <li><a href="#mamel">Straw Voodoll Family</a></li>
-                <li><a href="#mamel">Weather Doll Family</a></li>
+                <li><a href="#nigiri_trainee_family">Nigiri Trainee Family</a></li>
+                <li><a href="#mixer_family">Mixer Family</a></li>
+                <li><a href="#straw_voodoll_family">Straw Voodoll Family</a></li>
+                <li><a href="#weather_doll_family">Weather Doll Family</a></li>
               </ul>
               <li><a href="#stealing">Stealing</a></li>
               <ul>
-                <li><a href="#mamel">Zalokleft Family</a></li>
-                <li><a href="#mamel">Gamarra Family</a></li>
-                <li><a href="#mamel">Gyadon Family</a></li>
+                <li><a href="#zalokleft_family">Zalokleft Family</a></li>
+                <li><a href="#gamarra_family">Gamarra Family</a></li>
+                <li><a href="#gyadon_family">Gyadon Family</a></li>
               </ul>
               <li><a href="#dragon">Dragon</a></li>
               <ul>
-                <li><a href="#mamel">Dragon Family</a></li>
-                <li><a href="#mamel">Shaaga Family</a></li>
-                <li><a href="#mamel">Bone Dragon Family</a></li>
+                <li><a href="#dragon_family">Dragon Family</a></li>
+                <li><a href="#shaaga_family">Shaaga Family</a></li>
+                <li><a href="#bone_dragon_family">Bone Dragon Family</a></li>
               </ul>
               <li><a href="#ghost">Ghost</a></li>
               <ul>
-                <li><a href="#mamel">Pumphantasm Family</a></li>
-                <li><a href="#mamel">Gale Family</a></li>
-                <li><a href="#mamel">Yamikichi Family</a></li>
+                <li><a href="#pumphantasm_family">Pumphantasm Family</a></li>
+                <li><a href="#gale_family">Gale Family</a></li>
+                <li><a href="#yamikichi_family">Yamikichi Family</a></li>
               </ul>
               <li><a href="#drain">Drain</a></li>
               <ul>
-                <li><a href="#mamel">Twisty Hani</a></li>
-                <li><a href="#mamel">Slug Family</a></li>
-                <li><a href="#mamel">Scorpion Family</a></li>
-                <li><a href="#mamel">Hunger Puppet Family</a></li>
+                <li><a href="#twisty_hani">Twisty Hani</a></li>
+                <li><a href="#slug_family">Slug Family</a></li>
+                <li><a href="#scorpion_family">Scorpion Family</a></li>
+                <li><a href="#hunger_puppet_family">Hunger Puppet Family</a></li>
               </ul>
               <li><a href="#one-eyed">One-eyed</a></li>
               <ul>
-                <li><a href="#mamel">Gazer Family</a></li>
-                <li><a href="#mamel">Ironhead Family</a></li>
-                <li><a href="#mamel">Golem Family</a></li>
+                <li><a href="#gazer_family">Gazer Family</a></li>
+                <li><a href="#ironhead_family">Ironhead Family</a></li>
+                <li><a href="#golem_family">Golem Family</a></li>
               </ul>
               <li><a href="#bomb">Bomb</a></li>
               <ul>
-                <li><a href="#mamel">Wolf Droid Family</a></li>
-                <li><a href="#mamel">Patient Bag Family</a></li>
-                <li><a href="#mamel">Bow Boy Family</a></li>
+                <li><a href="#wolf_droid_family">Wolf Droid Family</a></li>
+                <li><a href="#patient_bag">Patient Bag</a></li>
+                <li><a href="#bow_boy_family">Bow Boy Family</a></li>
               </ul>
               <li><a href="#water">Water</a></li>
               <ul>
