I should go to bed

--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -41,8 +41,8 @@
               </ul>
               <li><a href="#weapon">Weapon</a></li>
               <ul>
-                <li><a href="#swordsman_family">Swordsman Family</a></li>
-                <li><a href="#taur_family">Taur Family</a></li>
+                <li><a href="#kengo_family">Kengo Family</a></li>
+                <li><a href="#taur_family">Taurus Family</a></li>
                 <li><a href="#ashigarudon_family">Ashigarudon Family</a></li>
               </ul>
               <li><a href="#throwing">Throwing</a></li>
@@ -113,25 +113,19 @@
               <li><a href="#oni">Oni</a></li>
               <ul>
                 <li><a href="#small_oni_family">Small Oni Family</a></li>
-                <!-- Small Oni, Rocky Oni, Stumpy Oni -->
                 <li><a href="#lanky_oni_family">Lanky Oni Family</a></li>
-                <!-- Lanky Oni, Slender Oni, Skinny Oni -->
                 <li><a href="#galaha">Galaha</a></li>
                 <li><a href="#boss_oni">Boss Oni</a></li>
               </ul>
               <li><a href="#other">Other</a></li>
               <ul>
                 <li><a href="#shopkeeper_family">Shopkeeper Family</a></li>
-                <!-- Shopkeeper, Asst. Manager, Manager -->
                 <li><a href="#trader_family">Trader Family</a></li>
-                <!-- Trader, Hawker -->
                 <li><a href="#sheriff">Sheriff</a></li>
                 <li><a href="#guard_dog">Guard Dog</a></li>
                 <li><a href="#shuten_child">Shuten Child</a></li>
                 <li><a href="#clay_figures">Clay Figures</a></li>
-                <!-- Figure, Good Figure, Great Figure -->
                 <li><a href="#oni_dolls">Oni Dolls</a></li>
-                <!-- Oni Doll, Oni Doll 2 -->
               </ul>
             </ul>
           </div>
