Clean things up a bit, and add some more table explanations to monster page

--- a/html/system/monster.html
+++ b/html/system/monster.html
@@ -42,7 +42,7 @@
               <li><a href="#weapon">Weapon</a></li>
               <ul>
                 <li><a href="#kengo_family">Kengo Family</a></li>
-                <li><a href="#taur_family">Taurus Family</a></li>
+                <li><a href="#taurus_family">Taurus Family</a></li>
                 <li><a href="#ashigarudon_family">Ashigarudon Family</a></li>
               </ul>
               <li><a href="#throwing">Throwing</a></li>
@@ -137,37 +137,6 @@
                 <ul>
                   <li>Gets divided by 2 if a monster is being attacked by another monster.</li>
                 </ul>
-                <li>Sleep:</li>
-                  <ul>
-                    <li>Chance monster is sleeping when generated.</li>
-                  </ul>
-                <li>Wake:</li>
-                <ul>
-                  <li>Condition in which the monster wakes up from natural sleep.</li>
-                </ul>
-                <div>
-                  <table>
-                    <tr>
-                      <th>Type</th>
-                      <th>Condition</th>
-                    </tr>
-                    <tr>
-                      <td>1 Tile</td>
-                      <td>Wakes up when Shiren walks next to it.</td>
-                    </tr>
-                    <tr>
-                      <td>3 Tiles</td>
-                      <td>Wakes up when Shiren walks within 3 tiles of it.</td>
-                    </tr>
-                    <tr>
-                      <td>Low</td>
-                      <td>25% chance to wake up when Shiren enters or exits the room.<br>45% chance to wake up when Shiren walks next to it.</td>
-                    </tr>
-                    <tr>
-                      <td>High</td>
-                      <td>45% chance to wake up when Shiren enters or exits the room.<br>75% chance to wake up when Shiren walks next to it.</td>
-                    </tr>
-                  </table>
                 <li>Element:</li>
                   <ul>
                     <li>Monsters can have multiple elements.</li>
@@ -266,7 +235,50 @@
                       </tr>
                     </table>
                   </div>
+                <li>Sleep:</li>
+                  <ul>
+                    <li>Chance monster is sleeping when generated.</li>
+                  </ul>
+                <li>Wake:</li>
+                <ul>
+                  <li>Condition in which the monster wakes up from natural sleep.</li>
+                </ul>
+                <div>
+                  <table>
+                    <tr>
+                      <th>Type</th>
+                      <th>Condition</th>
+                    </tr>
+                    <tr>
+                      <td>1 Tile</td>
+                      <td>Wakes up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>3 Tiles</td>
+                      <td>Wakes up when Shiren walks within 3 tiles of it.</td>
+                    </tr>
+                    <tr>
+                      <td>Low</td>
+                      <td>25% chance to wake up when Shiren enters or exits the room.<br>45% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                    <tr>
+                      <td>High</td>
+                      <td>45% chance to wake up when Shiren enters or exits the room.<br>75% chance to wake up when Shiren walks next to it.</td>
+                    </tr>
+                  </table>
                 </div>
+                <li>Drop:</li>
+                  <ul>
+                    <li>Monster's item drop rate.</li>
+                  </ul>
+                <li>Item:</li>
+                  <ul>
+                    <li>Monster's fixed item drop.</li>
+                  </ul>
+                <li>SP:</li>
+                  <ul>
+                    <li>Monster's special attack usage rate.</li>
+                  </ul>
               </ul>
             </div>
           </div>
