Let's not break the monster page link in the sidebar

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -29,7 +29,7 @@
   <div class="sidebar-category">System</div>
   <a href="/shiren2/html/system/basics.html">Basics</a>
   <a href="/shiren2/html/system/synthesis_seal.html">Seals</a>
-  <a href="/shiren2/html/system/monster.html.html">Monsters</a>
+  <a href="/shiren2/html/system/monster.html">Monsters</a>
   <a href="/shiren2/html/system/castle.html">Castle</a>
   <a href="/shiren2/html/system/ally.html">Allies</a>
   <a href="/shiren2/html/system/trap.html">Traps</a>
