--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -27,7 +27,7 @@
             </ul>
           </div>
           <div>
-            <h4 id="scroll_bracelet_grass">Scroll・Bracelet・Grass</h4>
+            <h4 id="scroll_bracelet_grass">Scrolls・Bracelets・Grasses</h4>
             <div class="price_table_div">
               <table id="price_scroll" class="price_table">
                 <td colspan="4"><img src="">Scroll</td>
@@ -278,16 +278,492 @@
                   <th>Sell</th>
                 </tr>
                 <tr>
-                  <td><a href="/html/item/bracelet.html#stat_lock_bracelet">Stat Lock Bracelet</a></td>
+                  <td><a href="/html/item/bracelet.html#weeds">Weeds</a></td>
                   <td>-</td>
+                  <td>50</td>
+                  <td>25</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#herb">Herb</a></td>
+                  <td>薬</td>
+                  <td>100</td>
+                  <td>50</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#twisty_grass">Twisty Grass</a></td>
+                  <td>-</td>
+                  <td rowspan="3">300</td>
+                  <td rowspan="3">150</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#swift_grass">Swift Grass</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#warp_grass">Warp Grass</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#life_grass">Life Grass</a></td>
+                  <td>命</td>
+                  <td rowspan="5">400</td>
+                  <td rowspan="5">200</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#expand_seed">Expand Seed</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#shrink_seed">Shrink Seed</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#antidote_grass">Antidote Grass</a></td>
+                  <td>消</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#super_unlucky_seed">Super Unlucky Seed</a></td>
+                  <td>超</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#talking_seed">Talking Seed</a></td>
+                  <td>-</td>
+                  <td rowspan="4">500</td>
+                  <td>100</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#otogiriso">Otogiriso</a></td>
+                  <td>弟</td>
+                  <td rowspan="3">250</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#sight_grass">Sight Grass</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#dragon_grass">Dragon Grass</a></td>
+                  <td>火</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#flame_grass">Flame Grass</a></td>
+                  <td>火</td>
+                  <td>700</td>
+                  <td>350</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#boost_grass">Boost Grass</a></td>
+                  <td>-</td>
+                  <td>1000</td>
+                  <td>500</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#strength_grass">Strength Grass</a></td>
+                  <td>ち</td>
+                  <td rowspan="2">1500</td>
+                  <td rowspan="2">700</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#poison_grass">Poison Grass</a></td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#happy_grass">Happy Grass</a></td>
+                  <td>幸</td>
+                  <td rowspan="2">2000</td>
+                  <td rowspan="2">1000</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/scroll.html#unlucky_seed">Unlucky Seed</a></td>
+                  <td>不</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#revival_grass">Revival Grass</a></td>
+                  <td>-</td>
+                  <td>2500</td>
+                  <td>1250</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/bracelet.html#angel_seed">Angel Seed</a></td>
+                  <td>天</td>
                   <td>3000</td>
                   <td>1500</td>
                 </tr>
               </table>
             </div>
           </div>
-          <div id="staff"></div>
-          <div id="pot"></div>
+          <div id="staff">
+            <h4>Staves</h4>
+            <div class="price_table_div">
+              <table id="price_staff" class="price_table">
+                <td colspan="10">Buy</td>
+                <td rowspan="21"></td>
+                <td colspan="9">Sell</td>
+                <tr>
+                  <th>Name</th>
+                  <th>Use</th>
+                  <th>0</th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                  <th>7</th>
+                  <th>Use</th>
+                  <th>0</th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                  <th>7</th>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#knockback_staff">Knockback Staff</a></td>
+                  <td rowspan="2">25</td>
+                  <td rowspan="2">500</td>
+                  <td rowspan="2">525</td>
+                  <td rowspan="2">550</td>
+                  <td rowspan="2">575</td>
+                  <td rowspan="2">600</td>
+                  <td rowspan="2">625</td>
+                  <td rowspan="2">650</td>
+                  <td rowspan="2">675</td>
+                  <td rowspan="2">12.5</td>
+                  <td rowspan="2">250</td>
+                  <td rowspan="2">262</td>
+                  <td rowspan="2">275</td>
+                  <td rowspan="2">287</td>
+                  <td rowspan="2">300</td>
+                  <td rowspan="2">312</td>
+                  <td rowspan="2">325</td>
+                  <td rowspan="2">337</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#posession_staff">Posession Staff</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#swap_staff">Swap Staff</a></td>
+                  <td rowspan="2">40</td>
+                  <td rowspan="2">800</td>
+                  <td rowspan="2">840</td>
+                  <td rowspan="2">880</td>
+                  <td rowspan="2">920</td>
+                  <td rowspan="2">960</td>
+                  <td rowspan="2">1000</td>
+                  <td rowspan="2">1040</td>
+                  <td rowspan="2">1080</td>
+                  <td rowspan="2">20</td>
+                  <td rowspan="2">400</td>
+                  <td rowspan="2">420</td>
+                  <td rowspan="2">440</td>
+                  <td rowspan="2">460</td>
+                  <td rowspan="2">480</td>
+                  <td rowspan="2">500</td>
+                  <td rowspan="2">520</td>
+                  <td rowspan="2">540</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#pull_staff">Pull Staff</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#heal_staff">Heal Staff</a></td>
+                  <td>80</td>
+                  <td>800</td>
+                  <td>880</td>
+                  <td>960</td>
+                  <td>1040</td>
+                  <td>1120</td>
+                  <td>1200</td>
+                  <td>1280</td>
+                  <td>1360</td>
+                  <td>40</td>
+                  <td>400</td>
+                  <td>440</td>
+                  <td>480</td>
+                  <td>520</td>
+                  <td>560</td>
+                  <td>600</td>
+                  <td>640</td>
+                  <td>680</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#balance_staff">Balance Staff</a></td>
+                  <td rowspan="2">50</td>
+                  <td rowspan="2">1000</td>
+                  <td rowspan="2">1050</td>
+                  <td rowspan="2">1100</td>
+                  <td rowspan="2">1150</td>
+                  <td rowspan="2">1200</td>
+                  <td rowspan="2">1250</td>
+                  <td rowspan="2">1300</td>
+                  <td rowspan="2">1350</td>
+                  <td rowspan="2">25</td>
+                  <td rowspan="2">500</td>
+                  <td rowspan="2">525</td>
+                  <td rowspan="2">550</td>
+                  <td rowspan="2">575</td>
+                  <td rowspan="2">600</td>
+                  <td rowspan="2">625</td>
+                  <td rowspan="2">650</td>
+                  <td rowspan="2">675</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#knowledge_staff">Knowledge Staff</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#quarter_staff">Quarter Staff</a></td>
+                  <td rowspan="2">60</td>
+                  <td rowspan="2">1200</td>
+                  <td rowspan="2">1260</td>
+                  <td rowspan="2">1320</td>
+                  <td rowspan="2">1380</td>
+                  <td rowspan="2">1440</td>
+                  <td rowspan="2">1500</td>
+                  <td rowspan="2">1560</td>
+                  <td rowspan="2">1620</td>
+                  <td>12.5</td>
+                  <td>250</td>
+                  <td>262</td>
+                  <td>275</td>
+                  <td>287</td>
+                  <td>300</td>
+                  <td>312</td>
+                  <td>325</td>
+                  <td>337</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#slow_staff">Slow Staff</a></td>
+                  <td>20</td>
+                  <td>400</td>
+                  <td>420</td>
+                  <td>440</td>
+                  <td>460</td>
+                  <td>480</td>
+                  <td>500</td>
+                  <td>520</td>
+                  <td>540</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#seal_staff">Seal Staff</a></td>
+                  <td rowspan="3">100</td>
+                  <td rowspan="3">2000</td>
+                  <td rowspan="3">2100</td>
+                  <td rowspan="3">2200</td>
+                  <td rowspan="3">2300</td>
+                  <td rowspan="3">2400</td>
+                  <td rowspan="3">2500</td>
+                  <td rowspan="3">2600</td>
+                  <td rowspan="3">2700</td>
+                  <td>25</td>
+                  <td>500</td>
+                  <td>525</td>
+                  <td>550</td>
+                  <td>575</td>
+                  <td>600</td>
+                  <td>625</td>
+                  <td>650</td>
+                  <td>675</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#tunnel_staff">Tunnel Staff</a></td>
+                  <td rowspan="2">50</td>
+                  <td rowspan="2">1000</td>
+                  <td rowspan="2">1050</td>
+                  <td rowspan="2">1100</td>
+                  <td rowspan="2">1150</td>
+                  <td rowspan="2">1200</td>
+                  <td rowspan="2">1250</td>
+                  <td rowspan="2">1300</td>
+                  <td rowspan="2">1350</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#invisible_staff">Invisible Staff</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#swift_staff">Swift Staff</a></td>
+                  <td>200</td>
+                  <td>2000</td>
+                  <td>2200</td>
+                  <td>2400</td>
+                  <td>2600</td>
+                  <td>2800</td>
+                  <td>3000</td>
+                  <td>3200</td>
+                  <td>3400</td>
+                  <td>100</td>
+                  <td>1000</td>
+                  <td>1100</td>
+                  <td>1200</td>
+                  <td>1300</td>
+                  <td>1400</td>
+                  <td>1500</td>
+                  <td>1600</td>
+                  <td>1700</td>
+                </tr>
+                  <td><a href="/html/item/staff.html#miss_staff">Miss Staff</a></td>
+                  <td rowspan="2">125</td>
+                  <td rowspan="2">2500</td>
+                  <td rowspan="2">2625</td>
+                  <td rowspan="2">2750</td>
+                  <td rowspan="2">2875</td>
+                  <td rowspan="2">3000</td>
+                  <td rowspan="2">3125</td>
+                  <td rowspan="2">3250</td>
+                  <td rowspan="2">3375</td>
+                  <td rowspan="2">60</td>
+                  <td rowspan="2">1200</td>
+                  <td rowspan="2">1260</td>
+                  <td rowspan="2">1320</td>
+                  <td rowspan="2">1380</td>
+                  <td rowspan="2">1440</td>
+                  <td rowspan="2">1500</td>
+                  <td rowspan="2">1560</td>
+                  <td rowspan="2">1620</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#fire_staff">Fire Staff</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#unlucky_staff">Unlucky Staff</a></td>
+                  <td>250</td>
+                  <td>2500</td>
+                  <td>2750</td>
+                  <td>3000</td>
+                  <td>3250</td>
+                  <td>3500</td>
+                  <td>3750</td>
+                  <td>4000</td>
+                  <td>4250</td>
+                  <td>100</td>
+                  <td>1000</td>
+                  <td>1100</td>
+                  <td>1200</td>
+                  <td>1300</td>
+                  <td>1400</td>
+                  <td>1500</td>
+                  <td>1600</td>
+                  <td>1700</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#happy_staff">Happy Staff</a></td>
+                  <td rowspan="3">150</td>
+                  <td rowspan="3">3000</td>
+                  <td rowspan="3">3150</td>
+                  <td rowspan="3">3300</td>
+                  <td rowspan="3">3450</td>
+                  <td rowspan="3">3600</td>
+                  <td rowspan="3">3750</td>
+                  <td rowspan="3">3900</td>
+                  <td rowspan="3">4050</td>
+                  <td>50</td>
+                  <td>1000</td>
+                  <td>1050</td>
+                  <td>1100</td>
+                  <td>1150</td>
+                  <td>1200</td>
+                  <td>1250</td>
+                  <td>1300</td>
+                  <td>1350</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#grass_toss_staff">Grass Toss Staff</a></td>
+                  <td>60</td>
+                  <td>1200</td>
+                  <td>1260</td>
+                  <td>1320</td>
+                  <td>1380</td>
+                  <td>1440</td>
+                  <td>1500</td>
+                  <td>1560</td>
+                  <td>1620</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/staff.html#grass_receive_staff">Grass Receive Staff</a></td>
+                  <td>70</td>
+                  <td>1400</td>
+                  <td>1470</td>
+                  <td>1540</td>
+                  <td>1610</td>
+                  <td>1680</td>
+                  <td>1750</td>
+                  <td>1820</td>
+                  <td>1890</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div id="pot">
+            <h4>Pots</h4>
+            <div class="price_table_div">
+              <table id="price_pot" class="price_table">
+                <td colspan="9">Buy</td>
+                <td rowspan="15"></td>
+                <td colspan="8">Sell</td>
+                <tr>
+                  <th>Name</th>
+                  <th>Size</th>
+                  <th>0</th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                  <th>Size</th>
+                  <th>0</th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                  <th>4</th>
+                  <th>5</th>
+                  <th>6</th>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#identify_pot">Identify Pot</a></td>
+                  <td rowspan="2">50</td>
+                  <td rowspan="2">1000</td>
+                  <td rowspan="2">1050</td>
+                  <td rowspan="2">1100</td>
+                  <td rowspan="2">1150</td>
+                  <td rowspan="2">1200</td>
+                  <td rowspan="2">1250</td>
+                  <td rowspan="2">1300</td>
+                  <td rowspan="2">25</td>
+                  <td rowspan="2">500</td>
+                  <td rowspan="2">525</td>
+                  <td rowspan="2">550</td>
+                  <td rowspan="2">575</td>
+                  <td rowspan="2">600</td>
+                  <td rowspan="2">625</td>
+                  <td rowspan="2">650</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#degrade_pot">Degrade Pot</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#storage_pot">Storage Pot</a></td>
+                  <td>60</td>
+                  <td>1200</td>
+                  <td>1260</td>
+                  <td>1320</td>
+                  <td>1380</td>
+                  <td>1440</td>
+                  <td>1500</td>
+                  <td>1560</td>
+                  <td>30</td>
+                  <td>600</td>
+                  <td>630</td>
+                  <td>660</td>
+                  <td>690</td>
+                  <td>720</td>
+                  <td>750</td>
+                  <td>780</td>
+                </tr>
+              </table>
+            </div>
+          </div>
           <div id="weapon"></div>
           <div id="shield"></div>
         </div>
