more price chart stuff

--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -761,6 +761,180 @@
                   <td>750</td>
                   <td>780</td>
                 </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#presto_pot">Presto Pot</a></td>
+                  <td>100</td>
+                  <td>2000</td>
+                  <td>2100</td>
+                  <td>2200</td>
+                  <td>2300</td>
+                  <td>2400</td>
+                  <td>2500</td>
+                  <td>2600</td>
+                  <td>50</td>
+                  <td>1000</td>
+                  <td>1050</td>
+                  <td>1100</td>
+                  <td>1150</td>
+                  <td>1200</td>
+                  <td>1250</td>
+                  <td>1300</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#sticky_pot">Sticky Pot</a></td>
+                  <td rowspan="2">150</td>
+                  <td rowspan="2">3000</td>
+                  <td rowspan="2">3150</td>
+                  <td rowspan="2">3300</td>
+                  <td rowspan="2">3450</td>
+                  <td rowspan="2">3600</td>
+                  <td rowspan="2">3750</td>
+                  <td rowspan="2">3900</td>
+                  <td rowspan="2">75</td>
+                  <td rowspan="2">1500</td>
+                  <td rowspan="2">1575</td>
+                  <td rowspan="2">1650</td>
+                  <td rowspan="2">1725</td>
+                  <td rowspan="2">1800</td>
+                  <td rowspan="2">1875</td>
+                  <td rowspan="2">1950</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#water_pot">Water Pot</a></td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#grass_effect_pot">Grass Effect Pot</a></td>
+                  <td>200</td>
+                  <td>4000</td>
+                  <td>4200</td>
+                  <td>4400</td>
+                  <td>4600</td>
+                  <td>4800</td>
+                  <td>5000</td>
+                  <td>5200</td>
+                  <td>100</td>
+                  <td>2000</td>
+                  <td>2100</td>
+                  <td>2200</td>
+                  <td>2300</td>
+                  <td>2400</td>
+                  <td>2500</td>
+                  <td>2600</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#synthesis_pot">Synthesis Pot</a></td>
+                  <td>400</td>
+                  <td>8000</td>
+                  <td>8400</td>
+                  <td>8800</td>
+                  <td>9200</td>
+                  <td>9600</td>
+                  <td>10000</td>
+                  <td>10400</td>
+                  <td>200</td>
+                  <td>4000</td>
+                  <td>4200</td>
+                  <td>4400</td>
+                  <td>4600</td>
+                  <td>4800</td>
+                  <td>5000</td>
+                  <td>5200</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#upgrade_pot">Upgrade Pot</a></td>
+                  <td>750</td>
+                  <td>15000</td>
+                  <td>15750</td>
+                  <td>16500</td>
+                  <td>17250</td>
+                  <td>18000</td>
+                  <td>18750</td>
+                  <td>19500</td>
+                  <td>375</td>
+                  <td>7500</td>
+                  <td>7875</td>
+                  <td>8250</td>
+                  <td>8625</td>
+                  <td>9000</td>
+                  <td>9325</td>
+                  <td>9750</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#surprise_pot">Surprise Pot</a></td>
+                  <td>0</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>3000</td>
+                  <td>0</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                  <td>1500</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#memento_pot">Memento Pot</a></td>
+                  <td>500</td>
+                  <td>10000</td>
+                  <td>10500</td>
+                  <td>11000</td>
+                  <td>11500</td>
+                  <td>12000</td>
+                  <td>12500</td>
+                  <td>13000</td>
+                  <td>250</td>
+                  <td>5000</td>
+                  <td>5250</td>
+                  <td>5500</td>
+                  <td>5750</td>
+                  <td>6000</td>
+                  <td>6250</td>
+                  <td>6500</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#monster_pot">Monster Pot</a></td>
+                  <td>0</td>
+                  <td>10000</td>
+                  <td>10000</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>0</td>
+                  <td>1</td>
+                  <td>1</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
+                <tr>
+                  <td><a href="/html/item/pot.html#savings_pot">Savings Pot</a></td>
+                  <td>-</td>
+                  <td>2</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>1</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>-</td>
+                </tr>
               </table>
             </div>
           </div>
