--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -1,53 +1,53 @@
 <div class="sidebar-menu">
   <div class="sidebar-category">Items</div>
-  <a href="/shiren2/html/item/weapon.html">Weapons</a>
-  <a href="/shiren2/html/item/shield.html">Shields</a>
-  <a href="/shiren2/html/item/bracelet.html">Bracelets</a>
-  <a href="/shiren2/html/item/food.html">Food</a>
-  <a href="/shiren2/html/item/grass.html">Grass</a>
-  <a href="/shiren2/html/item/staff.html">Staves</a>
-  <a href="/shiren2/html/item/scroll.html">Scrolls</a>
-  <a href="/shiren2/html/item/pot.html">Pots</a>
-  <a href="/shiren2/html/item/ranged.html">Projectiles</a>
-  <a href="/shiren2/html/item/material.html">Materials</a>
-  <a href="/shiren2/html/item/decoration.html">Decorations</a>
-  <a href="/shiren2/html/item/other.html">Other</a><br>
-  <a href="/shiren2/html/item/price_chart.html">Price Chart</a>
+  ┣ <a href="/shiren2/html/item/weapon.html">Weapons</a>
+  / <a href="/shiren2/html/item/shield.html">Shields</a><br>
+  ┣ <a href="/shiren2/html/item/bracelet.html">Bracelets</a>
+  / <a href="/shiren2/html/item/food.html">Food</a>
+  / <a href="/shiren2/html/item/grass.html">Grass</a><br>
+  ┣ <a href="/shiren2/html/item/staff.html">Staves</a>
+  / <a href="/shiren2/html/item/scroll.html">Scrolls</a>
+  / <a href="/shiren2/html/item/pot.html">Pots</a><br>
+  ┣ <a href="/shiren2/html/item/ranged.html">Projectiles</a>
+  / <a href="/shiren2/html/item/material.html">Materials</a><br>
+  ┣ <a href="/shiren2/html/item/decoration.html">Decorations</a>
+  / <a href="/shiren2/html/item/other.html">Other</a><br>
+  ┗ <a href="/shiren2/html/item/price_chart.html">Price Chart</a>
   <div class="sidebar-category">Dungeons</div>
-  <div class="sidebar-sub-category">- Story -</div>
-  <a href="/shiren2/html/dungeon/small_valley.html">Small Valley</a><br>
-  <a href="/shiren2/html/dungeon/shuten_trail_easy.html">Shuten Trail Easy</a><br>
-  <a href="/shiren2/html/dungeon/shuten_trail_mid.html">Shuten Trail Mid</a><br>
-  <a href="/shiren2/html/dungeon/shuten_trail_hard.html">Shuten Trail Hard</a><br>
-  <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>
-  <div class="sidebar-sub-category">- Post-game -</div>
-  <a href="/shiren2/html/dungeon/hidden_hole.html">Hidden Hole</a><br>
-  <a href="/shiren2/html/dungeon/hidden_hole_b.html">Hidden Hole (B)</a><br>
-  <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a><br>
-  <a href="/shiren2/html/dungeon/halfway_well.html">Halfway Well</a><br>
-  <a href="/shiren2/html/dungeon/road_to_the_end.html">Road to the End</a>
+  <div class="sidebar-sub-category">Story</div>
+  ┣ <a href="/shiren2/html/dungeon/small_valley.html">Small Valley</a><br>
+  ┣ <a href="/shiren2/html/dungeon/shuten_trail_easy.html">Shuten Trail Easy</a><br>
+  ┣ <a href="/shiren2/html/dungeon/shuten_trail_mid.html">Shuten Trail Mid</a><br>
+  ┣ <a href="/shiren2/html/dungeon/shuten_trail_hard.html">Shuten Trail Hard</a><br>
+  ┗ <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>
+  <div class="sidebar-sub-category">Post-game</div>
+  ┣ <a href="/shiren2/html/dungeon/hidden_hole.html">Hidden Hole</a><br>
+  ┣ <a href="/shiren2/html/dungeon/hidden_hole_b.html">Hidden Hole (B)</a><br>
+  ┣ <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a><br>
+  ┣ <a href="/shiren2/html/dungeon/halfway_well.html">Halfway Well</a><br>
+  ┗ <a href="/shiren2/html/dungeon/road_to_the_end.html">Road to the End</a>
   <div class="sidebar-category">System</div>
-  <a href="/shiren2/html/system/basics.html">Basics</a>
-  <a href="/shiren2/html/system/synthesis_seal.html">Seals</a>
-  <a href="/shiren2/html/system/monster.html">Monsters</a>
-  <a href="/shiren2/html/system/castle.html">Castle</a>
-  <a href="/shiren2/html/system/ally.html">Allies</a>
-  <a href="/shiren2/html/system/trap.html">Traps</a>
-  <a href="/shiren2/html/system/statue.html">Statues</a>
-  <a href="/shiren2/html/system/golden_interval.html">Golden Intervals</a><br>
-  <a href="/shiren2/html/system/monster_kingdom.html">Monster Kingdom</a><br>
-  <a href="/shiren2/html/system/monster_house.html">Monster House</a>
+  ┣ <a href="/shiren2/html/system/basics.html">Basics</a><br>
+  ┣ <a href="/shiren2/html/system/synthesis_seal.html">Seals</a>
+  / <a href="/shiren2/html/system/monster.html">Monsters</a><br>
+  ┣ <a href="/shiren2/html/system/castle.html">Castle</a>
+  / <a href="/shiren2/html/system/ally.html">Allies</a><br>
+  ┣ <a href="/shiren2/html/system/trap.html">Traps</a>
+  / <a href="/shiren2/html/system/statue.html">Statues</a><br>
+  ┣ <a href="/shiren2/html/system/golden_interval.html">Golden Intervals</a><br>
+  ┣ <a href="/shiren2/html/system/monster_kingdom.html">Monster Kingdom</a><br>
+  ┗ <a href="/shiren2/html/system/monster_house.html">Monster House</a>
   <div class="sidebar-category">Playing</div>
-  <div class="sidebar-sub-category">- Techniques -</div>
-  <a href="/shiren2/html/playing/basics.html">Basics</a>
-  <a href="/shiren2/html/playing/advanced.html">Advanced</a>
-  <a href="/shiren2/html/playing/stealing.html">Stealing</a>
-  <div class="sidebar-sub-category">- Misc -</div>
-  <a href="/shiren2/html/playing/faq.html">FAQ</a>
-  <a href="/shiren2/html/playing/secret_phrases.html">Secret Phrases</a>
-  <a href="/shiren2/html/playing/gallery.html">Gallery</a>
-  <a href="/shiren2/html/playing/exp_stat.html">Exp &amp; Stats</a>
-  <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a>
+  <div class="sidebar-sub-category">Techniques</div>
+  ┣ <a href="/shiren2/html/playing/basics.html">Basics</a>
+  / <a href="/shiren2/html/playing/advanced.html">Advanced</a><br>
+  ┗ <a href="/shiren2/html/playing/stealing.html">Stealing</a>
+  <div class="sidebar-sub-category">Other</div>
+  ┣ <a href="/shiren2/html/playing/faq.html">FAQ</a>
+  / <a href="/shiren2/html/playing/secret_phrases.html">Secret Phrases</a><br>
+  ┣ <a href="/shiren2/html/playing/gallery.html">Gallery</a>
+  / <a href="/shiren2/html/playing/exp_stat.html">Exp &amp; Stats</a><br>
+  ┗ <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a>
   <div class="sidebar-category">Links</div>
-  <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
+  ┗ <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
 </div>
