Added shuten trail easy page

--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -56,7 +56,7 @@
                   <td>No</td>
                 </tr>
                 <tr>
-                  <th>Font</th>
+                  <th>UI Color</th>
                   <td>Green</td>
                 </tr>
               </table>
