--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -48,7 +48,7 @@
                   <td>3F</td>
                 </tr>
                 <tr>
-                  <th>Carry-in</th>
+                  <th>Carry-in<br>Items</th>
                   <td>No</td>
                 </tr>
                 <tr>
@@ -71,13 +71,11 @@
               </tr>
               <tr>
                 <th>2</th>
-                <td>Mamel</td>
-                <td>Chintala</td>
+                <td rowspan="2" class="monster_normal">Mamel</td>
+                <td rowspan="2" class="monster_normal">Chintala</td>
               </tr>
               <tr>
                 <th>3</th>
-                <td>Mamel</td>
-                <td>Chintala</td>
               </tr>
             </table>
           </div>
