Working on the Shuten Trail Easy page

--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -80,55 +80,58 @@
             </table>
           </div>
           <h2>Items</h2>
+          <ul>
+            <li>Key: <b>F</b>loor</li>
+          </ul>
           <div class="dungeon_item_table">
             <table>
               <tr>
                 <th>Name</th>
-                <th>Where</th>
+                <th>F</th>
               </tr>
               <tr>
                 <td>Club</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Leather Shield</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Life Grass</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Otogiriso</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Warp Grass</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Strength Grass</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Dragon Grass</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Revival Grass</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Herb</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Lightning Scroll</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
               <tr>
                 <td>Slumber Scroll</td>
-                <td>Floor</td>
+                <td>☆</td>
               </tr>
             </table>
           </div>
