--- a/html/dungeon/shuten_trail_mid.html
+++ b/html/dungeon/shuten_trail_mid.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Shuten Trail Easy</title>
+    <title>Shiren 2 | Shuten Trail Mid</title>
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -16,28 +16,26 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2 class="dungeon_heading">Shuten Trail Easy</h2>
+          <h2 class="dungeon_heading">Shuten Trail Mid</h2>
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
-              <p>The first real dungeon of Shiren's adventure after clearing Small Valley.</p>
+              <p>Dungeon you can enter after clearing Shuten Trail Easy.</p>
               <p>
-                Shiren's primary goal at this point in the game is to build a castle.<br>
-                In order to do so, he has to gather castle materials in the mountains,<br>
-                make castle parts out of them at the summit, and then return to Napus Village.
+                There are more troublesome monsters compared to the first trail.<br>
+                In particular, you'll want to be careful when progressing<br>
+                through Dororo Creek, Wandering Cave, and Phantom Pass.<br>
+                Don't hesitate to use items to make it past those areas.
               </p>
               <p>
-                This dungeon has a lower difficulty, just as the name implies.<br>
-                Monsters don't hit very hard, and there aren't any boss fights,<br>
-                so you can likely one-shot clear it if you have some experience.
+                However, there's a boss fight on 13F, so it would be good<br>
+                to keep Decoy, Slumber, and Lightning scrolls on hand,<br>
+                along with Dragon and Swift grasses.
+              </p>
+              <p class="dungeon_desc_warning">
+                ※ <a href="/shiren2/html/item/material.html#perfect_wood">Perfect Wood</a> can only be found on this trail past Shuten Halfway.
               </p>
               <p>
-                That said, you can't synthesize equipment yet, and you won't<br>
-                find any bracelets, arrows, or staves on the ground, so<br>
-                enemies in the second half might give you a bit of trouble.
-              </p>
-              <p>
-                Clearing this trail will unlock Shuten Trail Mid, and then<br>
-                clearing the second trail will unlock Shuten Trail Hard.
+
               </p>
               <ul>
                 <li><a href="#basic_strategy">Dungeon Overview</a></li>
@@ -45,15 +43,13 @@
                 <ul>
                   <li><a href="">1~2F Green Forest (Shuffle)</a></li>
                   <li><a href="">3~4F Bamboo Forest (Shuffle)</a></li>
-                  <li><a href="">5~6F Deserted Shaft</a></li>
+                  <li><a href="">5F Deserted Shaft</a></li>
+                  <li><a href="">6~7F Deserted Shaft</a></li>
                   <li><a href="">Shuten Halfway</a></li>
-                  <ul>
-                    <li><a href="">Blacksmith</a></li>
-                    <li><a href="">Trader's Shop</a></li>
-                  </ul>
-                  <li><a href="">7F Inexhaustible Falls (Shuffle)</a></li>
-                  <li><a href="">8F Stalactite Cave</a></li>
-                  <li><a href="">9~10F Abyss Gorge (Shuffle)</a></li>
+                  <li><a href="">8F Inexhaustible Falls (Shuffle)</a></li>
+                  <li><a href="">9~10F Stalactite Cave</a></li>
+                  <li><a href="">11~12F Abyss Gorge (Shuffle)</a></li>
+                  <li><a href="">13F Stalactite Cave</a></li>
                 </ul>
                 <li><a href="">Monsters</a></li>
                 <li><a href="">Items</a></li>
@@ -63,11 +59,11 @@
             <div class="dungeon_desc_table">
               <table>
                 <tr>
-                  <td colspan="2"><img src="/shiren2/image/dungeon/shuten_trail_easy.png" width="200" height="auto"></td>
+                  <td colspan="2"><img src="/shiren2/image/dungeon/shuten_trail_mid.png" width="200" height="auto"></td>
                 </tr>
                 <tr>
                   <th>Floors</th>
-                  <td>10F</td>
+                  <td>13F</td>
                 </tr>
                 <tr>
                   <th>Direction</th>
@@ -75,15 +71,15 @@
                 </tr>
                 <tr>
                   <th>Unlock</th>
-                  <td>-</td>
+                  <td>Clear Shuten<br>Trail Easy.</td>
                 </tr>
                 <tr>
                   <th>Entrance</th>
-                  <td>Upper left corner<br>of Napus village.</td>
+                  <td>Cave north of<br>Napus village.</td>
                 </tr>
                 <tr>
                   <th>Reward</th>
-                  <td>Shuten Trail Mid<br>dungeon unlocked.</td>
+                  <td>Shuten Trail Hard<br>dungeon unlocked.</td>
                 </tr>
                 <tr>
                   <th>Golden<br>Interval</th>
@@ -99,15 +95,15 @@
                 </tr>
                 <tr>
                   <th>Shops</th>
-                  <td>No</td>
+                  <td>Yes (8F)</td>
                 </tr>
                 <tr>
                   <th>Traders</th>
-                  <td>No</td>
+                  <td>Yes (8~12F)</td>
                 </tr>
                 <tr>
                   <th>UI Color</th>
-                  <td>Green</td>
+                  <td>Light Purple</td>
                 </tr>
               </table>
             </div>
