--- a/html/dungeon/small_valley.html
+++ b/html/dungeon/small_valley.html
@@ -71,13 +71,20 @@
               </tr>
               <tr>
                 <th>2</th>
-                <td rowspan="2" class="monster_normal">Mamel</td>
-                <td rowspan="2" class="monster_normal">Chintala</td>
+                <td class="monster_normal">Mamel (15)</td>
+                <td class="monster_normal">Chintala (8)</td>
               </tr>
               <tr>
                 <th>3</th>
+                <td class="monster_normal">Mamel (8)</td>
+                <td class="monster_normal">Chintala (10)</td>
               </tr>
             </table>
+            <p class="dungeon_table_notes">
+              Numbers in parenthesis show monster spawn rate values.<br>
+              Divide the number by the total for that row to get the %.<br>
+              Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
+            </p>
           </div>
           <h2>Items</h2>
           <ul>
