add monster spawn rates to shuten trail mid page

--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -479,15 +479,11 @@
                 <td class="monster_dragon">Shaaga (7)</td>
               </tr>
             </table>
-            <ul class="dungeon_table_notes">
-              <li>
-                <p>
-                  Numbers in parenthesis show monster spawn rate values.<br>
-                  Divide the number by the total for that row to get the %.<br>
-                  Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
-                </p>
-              </li>
-            </ul>
+            <p class="dungeon_table_notes">
+              Numbers in parenthesis show monster spawn rate values.<br>
+              Divide the number by the total for that row to get the %.<br>
+              Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
+            </p>
           </div>
           <h2>Items</h2>
           <div class="dungeon_item_table_key">
